# SimCash

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  18_agent_3_policy_simulation.yaml  CLAUDE.md  Cargo.toml  Dockerfile  FAILING_TESTS_ANALYSIS.md  FINAL_TEST_FIXES_SUMMARY.md  HANDOVER-STEFAN.md  IMPLEMENTATION_STATUS.md  LICENSE  LSM_FIX_SUMMARY.md  PHASE1_VERBOSE_CLI_COMPLETE.md  PHASE2_3_VERBOSE_CLI_COMPLETE.md  PHASE_8_COMPLETION_REPORT.md  POLICY_SCENARIO_TESTING_IMPLEMENTATION.md  README.md  TEST_FIXES_SUMMARY.md  api_output_consistency_analysis.md  cloudbuild.yaml  firebase.json  pyrightconfig.json  test_baseline_cargo.txt  test_baseline_pytest.txt  test_checkpoint_persistence.py  test_checkpoint_sim1.yaml  test_checkpoint_sim2.yaml
api/: BUILD.md  CLAUDE.md  demo_ai_integration.sh  demo_comparison.sh  demo_large_scale.sh  demo_realistic_scenario.sh  demo_verbose_mode.sh  extract_metrics.py  generate_large_scenario.py  policies  pyproject.toml  pyrightconfig.json  test_api_endpoint.py  test_config.yaml  test_event_persistence_integration.py  test_ffi_events.py  test_minimal.yaml  verify_event_schema.py
api/migrations/: 001_add_config_json_to_checkpoints.sql  002_add_config_json_to_simulations.sql  003_add_simulation_events_table.sql  004_add_audit_tables.sql
api/payment_simulator/: __init__.py  _core.py  _core.pyi  backends.py  py.typed  schemas.py
api/payment_simulator/ai_cash_mgmt/: __init__.py  events.py
api/payment_simulator/api/: __init__.py  dependencies.py  main.py
api/payment_simulator/cli/: filters.py  main.py  output.py
api/payment_simulator/config/: __init__.py  loader.py  policy_config_builder.py  scenario_config_builder.py  schemas.py
api/payment_simulator/experiments/: README.md  __init__.py  run_id.py  simulation_id.py
api/payment_simulator/llm/: __init__.py  audit_wrapper.py  config.py  protocol.py  pydantic_client.py  result.py
api/payment_simulator/persistence/: __init__.py  checkpoint.py  connection.py  event_queries.py  event_writer.py  migrations.py  models.py  policy_tracking.py  queries.py  schema_generator.py  simulation_persistence_provider.py  writers.py
api/payment_simulator/policy/: __init__.py  analysis.py  validation.py
api/payment_simulator/shared/: __init__.py  data_contracts.py
api/payment_simulator/validation/: __init__.py  cost_ordering.py
api/results/: exp1.db  exp2.db  exp3.db
api/scenarios/: LARGE_SCALE_RESULTS.md  README.md  high_stress_gridlock.yaml  large_scale_200_agents.yaml  realistic_demo.yaml
api/tests/: TEST_DATABASES_README.md  conftest.py  test_cli.py
api/tests/ai_cash_mgmt/: __init__.py  test_events.py
api/tests/castro/: __init__.py  test_castro_equilibrium.py
api/tests/cli/: test_ai_game_show_reasoning.py  test_checkpoint_cli.py  test_db_commands_unified.py  test_experiment_commands.py  test_performance_output.py  test_run_command.py  test_state_register_display.py
api/tests/e2e/: README.md  test_checkpoint_api.py  test_checkpoint_integration.py  test_diagnostic_dashboard_e2e.py
api/tests/experiments/: test_module_structure.py  test_output_equivalence.py  test_run_id_core.py  test_simulation_linking.py
api/tests/ffi/: test_checkpoint.py  test_determinism.py  test_orchestrator_creation.py  test_state_queries.py  test_tick_execution.py  test_transaction_submission.py
api/tests/integration/: test_agent_arrival_rate_change.py  test_agent_metrics.py  test_agent_metrics_persistence.py  test_algorithm_sequencing.py  test_api_output_consistency.py  test_api_output_strategy.py  test_api_simulations.py  test_api_state_provider_factory.py  test_api_transactions.py  test_bilateral_multilateral_limits.py  (+119 more)
api/typings/: payment_simulator_core_rs.pyi
experiments/castro/: .env.example  ARCHITECTURE.md  CLAUDE.md  HANDOVER.md  LAB_NOTES.md  README.md  REPORT_LLM_vs_RL_Policy_Optimization.md  VALIDATION_ERROR_REPORT.md  architecture.md  cli.py  lab_notes.md  parameter_sets.py  pyproject.toml
simulator/: CLAUDE.md  Cargo.toml
simulator/policies/: adaptive_liquidity_manager.json  aggressive_market_maker.json  agile_regional_bank.json  balanced_cost_optimizer.json  cautious_liquidity_preserver.json  cost_aware_test.json  deadline.json  deadline_driven_trader.json  efficient_memory_adaptive.json  efficient_proactive.json  efficient_splitting.json  fifo.json  goliath_national_bank.json  liquidity_aware.json  liquidity_splitting.json  memory_driven_strategist.json  mock_splitting.json  momentum_investment_bank.json  smart_budget_manager.json  smart_splitter.json  sophisticated_adaptive_bank.json  target2_aggressive_settler.json  target2_conservative_offsetter.json  target2_crisis_proactive_manager.json  target2_crisis_risk_denier.json  target2_limit_aware.json  target2_priority_aware.json  target2_priority_escalator.json  time_aware_test.json
simulator/src/: lib.rs
simulator/tests/: arrival_bands_tests.rs  liquidity_pool_tests.rs  orchestrator_scenario_events_test.rs  priority_delay_costs_tests.rs  test_agent.rs  test_agent_collateral_math.rs  test_bank_budgets.rs  test_bps_conversion.rs  test_checkpoint.rs  test_collateral_edge_cases.rs  test_collateral_event_tracking.rs  test_collateral_timer_invariants.rs  test_collateral_withdrawal_clamping.rs  test_cost_accrual.rs  test_daily_liquidity_cycle.rs  test_deadline_eod_cap.rs  test_deferred_crediting.rs  test_evalcontext_edge_cases.rs  test_event_emission.rs  test_exp3_orchestrator.rs  test_exp3_reproduction.rs  test_integer_cost_invariant.rs  test_lsm.rs  test_lsm_awareness_fields.rs  test_lsm_duplicate_transactions.rs  test_lsm_pair_index.rs  test_mid_sim_policy_update.rs  test_orchestrator_collateral_integration.rs  test_orchestrator_integration.rs  test_overdraft_regime.rs  test_penalty_mode.rs  test_policy_deadline_scenarios.rs  test_policy_fifo_scenarios.rs  test_policy_json_integration.rs  test_policy_liquidity_scenarios.rs  test_policy_stress.rs  test_rtgs_settlement.rs  test_scheduled_settlement_event.rs  test_state_register_actions.rs  test_three_bank_policies.rs  (+4 more)
web/backend/: BOOTSTRAP_PLAN.md  pyproject.toml
(+2123 files in other folders)
