[build-system]
requires = ["maturin>=1.9.6"]
build-backend = "maturin"

[project]
name = "payment-simulator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "shellingham>=1.5.0",
    "duckdb>=0.9.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.0",  # Required for Polars-DuckDB zero-copy integration
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For TestClient
]

[project.scripts]
payment-sim = "payment_simulator.cli.main:app"

[tool.maturin]
module-name = "payment_simulator_core_rs"
manifest-path = "../backend/Cargo.toml"
features = ["pyo3"]
bindings = "pyo3"
python-packages = ["payment_simulator"]
