[project]
name = "castro-experiments"
version = "0.3.0"
description = "Castro experiments using ai_cash_mgmt module with PydanticAI"
requires-python = ">=3.11"
dependencies = [
    "payment-simulator",  # Includes ai_cash_mgmt
    "pydantic-ai>=0.2",  # Unified LLM interface
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "pyright>=1.1.0",  # Pylance CLI - same engine as VS Code Pylance
    "ruff>=0.3",
    "types-PyYAML",  # Type stubs for PyYAML
]

[project.scripts]
castro = "cli:app"

[tool.uv.sources]
payment-simulator = { path = "../../api" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["castro"]

# =============================================================================
# Type Checking: mypy
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

# Ignore the Rust FFI module (no type stubs available)
[[tool.mypy.overrides]]
module = "payment_simulator_core_rs"
ignore_missing_imports = true

# Ignore missing LLM library stubs
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*", "openai", "openai.*", "pydantic_ai", "pydantic_ai.*"]
ignore_missing_imports = true

# =============================================================================
# Type Checking: pyright (VS Code Pylance uses this)
# =============================================================================
[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
include = ["castro", "cli.py"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "build", "dist", "results"]
typeCheckingMode = "standard"
# Suppress noisy errors for Rust FFI module
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# Useful warnings
reportPrivateUsage = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

# =============================================================================
# Linting: ruff
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ANN",    # flake8-annotations (STRICT TYPING)
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",    # Allow asserts in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]  # Tests: no annotations required, allow assert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# Testing: pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
