# Castro Experiments - YAML Configuration Only
#
# This directory contains YAML experiment configurations for replicating
# the work from Castro et al. (2025). All Python code is in the core
# payment_simulator module.
#
# To run experiments, use the core SimCash CLI:
#   payment-sim experiment run experiments/exp1.yaml

[project]
name = "castro-experiments"
version = "1.0.0"
description = "Castro et al. (2025) experiment configurations for SimCash - YAML only, no Python code"
readme = "README.md"
requires-python = ">=3.11"

# No Python dependencies - this is YAML configuration only
# All experiment execution happens via the core payment_simulator package
dependencies = []

[project.urls]
"Repository" = "https://github.com/aerugo/SimCash"
"Documentation" = "https://github.com/aerugo/SimCash/tree/main/experiments/castro"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Include only YAML configs and documentation
include = [
    "experiments/*.yaml",
    "configs/*.yaml",
    "papers/*.pdf",
    "README.md",
]
