[project]
name = "simcash-paper-generator"
version = "0.1.0"
description = "Programmatic LaTeX paper generator for SimCash research papers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.9.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    # payment-simulator is required for chart generation (ExperimentRepository)
    # It's installed as an editable dependency from the parent api/ directory
    "payment-simulator",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "pyright>=1.1.0",
    "ruff>=0.3.0",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# payment-simulator comes from the parent api/ directory
# Use editable install so changes to payment_simulator are reflected immediately

[tool.uv.sources]
payment-simulator = { path = "../../../../api", editable = true }

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
mypy_path = "."

# Ignore the Rust FFI module (no type stubs available)
[[tool.mypy.overrides]]
module = "payment_simulator_core_rs"
ignore_missing_imports = true

# Ignore payment_simulator imports (checked separately in api/)
[[tool.mypy.overrides]]
module = "payment_simulator.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ANN",    # flake8-annotations
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]  # Tests: no annotations required, allow assert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "build", "dist"]
typeCheckingMode = "standard"
# Suppress noisy errors for external modules
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# Useful warnings
reportPrivateUsage = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: integration tests requiring real database files",
    "unit: unit tests with mocked dependencies",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
